# project-2--Bialkovskii---25-255-

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
