[project]
name = "project2-bialkovskii-m25-255"
version = "0.1.0"
description = ""
authors = [
    {name = "MisterSigmaMac", email = "egorzapekanka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.scripts]
project = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
